--- a/xss/production/test/box2d3.html
+++ b/xss/production/test/box2d3.html
@@ -48,7 +48,7 @@ var Sound = new ms.ui.Sound();
         , b2Transform = Box2D.Common.Math.b2Transform
         ;
         var g_world = new b2World(
-            new b2Vec2(0, 10)    //gravity
+            new b2Vec2(1, 0)    //gravity
         ,  true                 //allow sleep
         );
             var g_spawner_manager = new ms.arcade.SpawnManager();
@@ -213,50 +213,6 @@ function start(resolution)
                 this.init();
             },
 });
-            wall = Class.create(ms.ui.Image,
-        {
-    initialize: function($super
-                , src
-                )
-    {
-        $super(
-        src? src : "images/stone-12.jpg"        );
-                var __physics2;
-                this.ev_resized = function(cmp) 
-                {
-                    if (cmp.physics)
-                        g_world.DestroyBody(cmp.physics);
-             fixDef.density = 1;
-             fixDef.friction = 0.5;
-             fixDef.restitution = 0.200000003;
-             bodyDef.type = b2Body.b2_staticBody;
-                fixDef.shape = new b2PolygonShape;
-                    fixDef.shape.SetAsBox(cmp.w/(2*g_world_scale), cmp.h/(2*g_world_scale));
-            fixDef.isSensor = false;
-                bodyDef.position.Set((cmp.x + cmp.w/2)/g_world_scale, (cmp.y + cmp.h/2)/g_world_scale);
-            current_body = g_world.CreateBody(bodyDef);
-            current_body.CreateFixture(fixDef);
-                cmp.physics = current_body;
-                cmp.moved = update_body_position;
-                current_body.host = cmp;
-                }
-                if (this.w > 0 && this.h > 0)
-                {
-                    this.ev_resized(this);
-                }
-                this.RemoveFromWorld = function(keep_visual) 
-                {
-                    g_world.DestroyBody(this.physics);
-                    if (!keep_visual)
-                    {
-                        this.parent.removeComponent(this);
-                    }
-                }
-                __physics2 = this.__physics2;
-            if (this.init)
-                this.init();
-            },
-});
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -286,15 +242,15 @@ window.onload = function()
 	{
 		ui.mouseup(ev.clientX, ev.clientY);                  
 	};	
-		    __wall1 = new wall( 
+		    __img1 = new ms.ui.Image( 
 	    "images/stone-12.jpg",g_ui_root.manager, g_ui_root);
-                __wall1.rect(0, 390, 600, 40);
-		    __wall2 = new wall( 
+                __img1.rect(0, 390, 600, 40);
+		    __img2 = new ms.ui.Image( 
 	    "images/stone-12.jpg",g_ui_root.manager, g_ui_root);
-                __wall2.rect(590, 250, 10, 140);
-		    __wall3 = new wall( 
+                __img2.rect(590, 350, 10, 40);
+		    __img3 = new ms.ui.Image( 
 	    "images/stone-12.jpg",g_ui_root.manager, g_ui_root);
-                __wall3.rect(0, 250, 10, 140);
+                __img3.rect(0, 350, 10, 40);
         sp1 = new ms.arcade.Spawner(g_spawner_manager, 300, 100, 3, 1, 10);
                 sp1.x = 300;
                 sp1.y = 100;
@@ -306,6 +262,96 @@ window.onload = function()
             return new smiley_ball("images/smile_grin_48.png");
         }
             sp1.start();
+                __img1.ev_resized = function(cmp) 
+                {
+                    if (cmp.physics)
+                        g_world.DestroyBody(cmp.physics);
+             fixDef.density = 1;
+             fixDef.friction = 0.5;
+             fixDef.restitution = 0.200000003;
+             bodyDef.type = b2Body.b2_staticBody;
+                fixDef.shape = new b2PolygonShape;
+                    fixDef.shape.SetAsBox(cmp.w/(2*g_world_scale), cmp.h/(2*g_world_scale));
+            fixDef.isSensor = false;
+                bodyDef.position.Set((cmp.x + cmp.w/2)/g_world_scale, (cmp.y + cmp.h/2)/g_world_scale);
+            current_body = g_world.CreateBody(bodyDef);
+            current_body.CreateFixture(fixDef);
+                cmp.physics = current_body;
+                cmp.moved = update_body_position;
+                current_body.host = cmp;
+                }
+                if (__img1.w > 0 && __img1.h > 0)
+                {
+                    __img1.ev_resized(__img1);
+                }
+                __img1.RemoveFromWorld = function(keep_visual) 
+                {
+                    g_world.DestroyBody(__img1.physics);
+                    if (!keep_visual)
+                    {
+                        __img1.parent.removeComponent(__img1);
+                    }
+                }
+                __img2.ev_resized = function(cmp) 
+                {
+                    if (cmp.physics)
+                        g_world.DestroyBody(cmp.physics);
+             fixDef.density = 1;
+             fixDef.friction = 0.5;
+             fixDef.restitution = 0.200000003;
+             bodyDef.type = b2Body.b2_staticBody;
+                fixDef.shape = new b2PolygonShape;
+                    fixDef.shape.SetAsBox(cmp.w/(2*g_world_scale), cmp.h/(2*g_world_scale));
+            fixDef.isSensor = false;
+                bodyDef.position.Set((cmp.x + cmp.w/2)/g_world_scale, (cmp.y + cmp.h/2)/g_world_scale);
+            current_body = g_world.CreateBody(bodyDef);
+            current_body.CreateFixture(fixDef);
+                cmp.physics = current_body;
+                cmp.moved = update_body_position;
+                current_body.host = cmp;
+                }
+                if (__img2.w > 0 && __img2.h > 0)
+                {
+                    __img2.ev_resized(__img2);
+                }
+                __img2.RemoveFromWorld = function(keep_visual) 
+                {
+                    g_world.DestroyBody(__img2.physics);
+                    if (!keep_visual)
+                    {
+                        __img2.parent.removeComponent(__img2);
+                    }
+                }
+                __img3.ev_resized = function(cmp) 
+                {
+                    if (cmp.physics)
+                        g_world.DestroyBody(cmp.physics);
+             fixDef.density = 1;
+             fixDef.friction = 0.5;
+             fixDef.restitution = 0.200000003;
+             bodyDef.type = b2Body.b2_staticBody;
+                fixDef.shape = new b2PolygonShape;
+                    fixDef.shape.SetAsBox(cmp.w/(2*g_world_scale), cmp.h/(2*g_world_scale));
+            fixDef.isSensor = false;
+                bodyDef.position.Set((cmp.x + cmp.w/2)/g_world_scale, (cmp.y + cmp.h/2)/g_world_scale);
+            current_body = g_world.CreateBody(bodyDef);
+            current_body.CreateFixture(fixDef);
+                cmp.physics = current_body;
+                cmp.moved = update_body_position;
+                current_body.host = cmp;
+                }
+                if (__img3.w > 0 && __img3.h > 0)
+                {
+                    __img3.ev_resized(__img3);
+                }
+                __img3.RemoveFromWorld = function(keep_visual) 
+                {
+                    g_world.DestroyBody(__img3.physics);
+                    if (!keep_visual)
+                    {
+                        __img3.parent.removeComponent(__img3);
+                    }
+                }
             g_ui.fill_background = false; //td: cross idiom
             var debugDraw = new b2DebugDraw();
             var debugDrawCanvas = document.getElementById("myCanvas");
