--- a/xss/production/test/jquery4.html
+++ b/xss/production/test/jquery4.html
@@ -22,7 +22,7 @@ btn2.width(100);
         };
 	application.reset = function(s) 
 	{
-		this.target_set(s);
+		application.target_set(s);
 btn1.text("...");
 btn2.text("...");
 	};
