--- a/xss/production/test/3js_class_test.html
+++ b/xss/production/test/3js_class_test.html
@@ -22,7 +22,7 @@ var Sound = new ms.ui.Sound();
 			var client =
 			{
 				width: 600,
-				height: 600,
+				height: 400,
 				canvas: drawingCanvas
 			};
 			var ui = new ms.ui.Manager(client, streamer);
@@ -49,6 +49,35 @@ function start(resolution)
 	}
 	window.setTimeout(updater, resolution);  
 }  
+            my_image = Class.create(ms.ui.Image,
+        {
+    initialize: function($super
+                , src
+                )
+    {
+        $super(
+        src        );
+                this.x_pos = null;
+                this.y_pos = null;
+                this.img2 = null;
+	this.traslate = function() 
+	{
+		this.x += 5;
+this.y += 5;
+this.set_rotation(this.rotation + 0.200000003);
+	};
+	this.click = function()
+	{    
+		this.x_pos = this.x;
+this.y_pos = this.y;
+this.traslate();
+this.img2 = new my_image("images/img1.png");
+this.img2.rect(this.x_pos + 50, this.y_pos - 50, 50, 50);
+	};
+            if (this.init)
+                this.init();
+            },
+});
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -58,7 +87,7 @@ window.onload = function()
 		var client =
 		{
 			width: 600,
-			height: 600,
+			height: 400,
 			canvas: drawingCanvas
 		};
 		var ui = new ms.ui.Manager(client, streamer);
@@ -78,55 +107,6 @@ window.onload = function()
 	{
 		ui.mouseup(ev.clientX, ev.clientY);                  
 	};	
-		    sd1 = new ms.ui.SelfDrawn( 
-	    g_ui_root.manager, g_ui_root);
-                sd1.ctx = null;
-                sd1.x = 50;
-                sd1.y = 50;
-                sd1.size = 20;
-                sd1.degrees = 30;
-                sd1.degreesList = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29];
-                sd1.i = 0;
-	sd1.reset = function() 
-	{
-		sd1.ctx.clearRect(150, 250, 100, 100);
-var left = sd1.degreesList.slice(0, 1);
-var right = sd1.degreesList.slice(1, sd1.degreesList.length);
-sd1.degreesList = right.concat(left);
-	};
-	sd1.draw_all = function() 
-	{
-		var c;
-var s;
-var e;
-var d = 0;
-if (sd1.i == 0)
-{
-sd1.reset();
-}
-sd1.ctx.save();
-d = sd1.degreesList[sd1.i];
-c = Math.floor(255 / sd1.degrees * sd1.i);
-sd1.ctx.strokeStyle = "rgb(" + c + ", " + c + ", " + c + ")";
-sd1.ctx.lineWidth = sd1.size;
-sd1.ctx.beginPath();
-s = Math.floor(360 / sd1.degrees * d);
-e = Math.floor(360 / sd1.degrees * (d + 1)) - 1;
-sd1.ctx.arc(sd1.x, sd1.y, sd1.size, Math.PI / 180 * s, Math.PI / 180 * e, false);
-sd1.ctx.stroke();
-sd1.ctx.restore();
-sd1.i = sd1.i + 1;
-if (sd1.i >= sd1.degrees)
-{
-sd1.i = 0;
-}
-	};
-	sd1.paint = function(context)
-	{    
-		sd1.ctx = context;
-window.canvasTimer = window.setInterval(sd1.draw_all, 100);
-	};
-                sd1.rect(200, 300, 600, 300);
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
@@ -151,7 +131,7 @@ window.canvasTimer = window.setInterval(sd1.draw_all, 100);
 </script>
 </head>
 <body>
-	<canvas id="myCanvas" width="600" height="600">
+	<canvas id="myCanvas" width="600" height="400">
 		<p>Your browser doesn't support canvas.</p>
 	</canvas>
 	<audio id="sounds" preload> 
