--- a/xss/production/test/box2d2.html
+++ b/xss/production/test/box2d2.html
@@ -48,7 +48,7 @@ var Sound = new ms.ui.Sound();
         , b2Transform = Box2D.Common.Math.b2Transform
         ;
         var g_world = new b2World(
-            new b2Vec2(0, 10)    //gravity
+            new b2Vec2(1, 0)    //gravity
         ,  true                 //allow sleep
         );
             var g_spawner_manager = new ms.arcade.SpawnManager();
@@ -96,12 +96,6 @@ var Sound = new ms.ui.Sound();
 		id:"__image2",
 		resource_type:RESOURCE_IMAGE,
 		src:"images/smile_sad_48.png"
-});
-                def_package_items.push(
-            {
-		id:"__image3",
-		resource_type:RESOURCE_IMAGE,
-		src:"images/stone-12.jpg"
 });
         var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
 		g_startup_package.load();	
@@ -205,9 +199,6 @@ window.onload = function()
 	    "images/smile_sad_48.png","images/smile_grin_48.png",g_ui_root.manager, g_ui_root);
                 btn1.set_rotation(0.200000003);
                 btn1.rect(200, 200, 50, 50);
-		    floor = new ms.ui.Image( 
-	    "images/stone-12.jpg",g_ui_root.manager, g_ui_root);
-                floor.rect(0, 390, 600, 40);
                 btn1.ev_resized = function(cmp) 
                 {
                     if (cmp.physics)
@@ -216,7 +207,7 @@ window.onload = function()
              fixDef.friction = 0.5;
              fixDef.restitution = 0.200000003;
              bodyDef.type = b2Body.b2_dynamicBody;
-                    fixDef.shape = new b2CircleShape(Math.min(cmp.w, cmp.h)/(2*g_world_scale));
+                    fixDef.shape = new b2CircleShape(1.20000005/g_world_scale);
             fixDef.isSensor = false;
                 bodyDef.position.Set((cmp.x + cmp.w/2)/g_world_scale, (cmp.y + cmp.h/2)/g_world_scale);
             current_body = g_world.CreateBody(bodyDef);
@@ -237,36 +228,16 @@ window.onload = function()
                         btn1.parent.removeComponent(btn1);
                     }
                 }
-                floor.ev_resized = function(cmp) 
-                {
-                    if (cmp.physics)
-                        g_world.DestroyBody(cmp.physics);
              fixDef.density = 1;
              fixDef.friction = 0.5;
              fixDef.restitution = 0.200000003;
              bodyDef.type = b2Body.b2_staticBody;
                 fixDef.shape = new b2PolygonShape;
-                    fixDef.shape.SetAsBox(cmp.w/(2*g_world_scale), cmp.h/(2*g_world_scale));
+                    fixDef.shape.SetAsBox(20/(2*g_world_scale), 2/(2*g_world_scale));
             fixDef.isSensor = false;
-                bodyDef.position.Set((cmp.x + cmp.w/2)/g_world_scale, (cmp.y + cmp.h/2)/g_world_scale);
+                bodyDef.position.Set(10, 15.1300001);
             current_body = g_world.CreateBody(bodyDef);
             current_body.CreateFixture(fixDef);
-                cmp.physics = current_body;
-                cmp.moved = update_body_position;
-                current_body.host = cmp;
-                }
-                if (floor.w > 0 && floor.h > 0)
-                {
-                    floor.ev_resized(floor);
-                }
-                floor.RemoveFromWorld = function(keep_visual) 
-                {
-                    g_world.DestroyBody(floor.physics);
-                    if (!keep_visual)
-                    {
-                        floor.parent.removeComponent(floor);
-                    }
-                }
             g_ui.fill_background = false; //td: cross idiom
             var debugDraw = new b2DebugDraw();
             var debugDrawCanvas = document.getElementById("myCanvas");
