--- a/xss/production/test/ui_figures.html
+++ b/xss/production/test/ui_figures.html
@@ -31,6 +31,18 @@ var Sound = new ms.ui.Sound();
 		}
 		var streamer = new ms.streamer.Streamer();
         var def_package_items = [];
+                def_package_items.push(
+            {
+		id:"__image1",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/smile_grin_48.png"
+});
+                def_package_items.push(
+            {
+		id:"__image2",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/smile_sad_48.png"
+});
         var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
 		g_startup_package.load();	
 function start(resolution)  
@@ -78,55 +90,32 @@ window.onload = function()
 	{
 		ui.mouseup(ev.clientX, ev.clientY);                  
 	};	
-		    sd1 = new ms.ui.SelfDrawn( 
-	    g_ui_root.manager, g_ui_root);
-                sd1.ctx = null;
-                sd1.x = 50;
-                sd1.y = 50;
-                sd1.size = 20;
-                sd1.degrees = 30;
-                sd1.degreesList = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29];
-                sd1.i = 0;
-	sd1.reset = function() 
-	{
-		sd1.ctx.clearRect(150, 250, 100, 100);
-var left = sd1.degreesList.slice(0, 1);
-var right = sd1.degreesList.slice(1, sd1.degreesList.length);
-sd1.degreesList = right.concat(left);
-	};
-	sd1.draw_all = function() 
-	{
-		var c;
-var s;
-var e;
-var d = 0;
-if (sd1.i == 0)
-{
-sd1.reset();
-}
-sd1.ctx.save();
-d = sd1.degreesList[sd1.i];
-c = Math.floor(255 / sd1.degrees * sd1.i);
-sd1.ctx.strokeStyle = "rgb(" + c + ", " + c + ", " + c + ")";
-sd1.ctx.lineWidth = sd1.size;
-sd1.ctx.beginPath();
-s = Math.floor(360 / sd1.degrees * d);
-e = Math.floor(360 / sd1.degrees * (d + 1)) - 1;
-sd1.ctx.arc(sd1.x, sd1.y, sd1.size, Math.PI / 180 * s, Math.PI / 180 * e, false);
-sd1.ctx.stroke();
-sd1.ctx.restore();
-sd1.i = sd1.i + 1;
-if (sd1.i >= sd1.degrees)
-{
-sd1.i = 0;
-}
-	};
-	sd1.paint = function(context)
-	{    
-		sd1.ctx = context;
-window.canvasTimer = window.setInterval(sd1.draw_all, 100);
-	};
-                sd1.rect(200, 300, 600, 300);
+		    div1 = new ms.ui.Component( 
+	    g_ui_root.manager, g_ui_root);div1.mouse_thru = true;
+                div1.rect(0, 0, 400, 200);
+		    c1 = new ms.ui.Circle( 
+	    null,"black",5,100,div1.manager, div1);
+                c1.position(100, 60);
+		    r1 = new ms.ui.Rectangle( 
+	    "green",null,null,div1.manager, div1);
+                r1.set_rotation(-0.200000003);
+                r1.rect(200, 200, 100, 150);
+		    p1 = new ms.ui.Path( 
+	    "pink","brown",3,div1.manager, div1);
+                p1.alpha(0.400000006);
+		p1.points.push({x:270 , y:300});
+		p1.points.push({x:300 , y:250});
+		p1.points.push({x:390 , y:200});
+		p1.points.push({x:350 , y:400});
+		p1.points.push({x:270 , y:300});
+		    stateBtn = new ms.ui.StateButton( 
+	    "images/smile_grin_48.png","images/smile_sad_48.png",g_ui_root.manager, g_ui_root);
+                stateBtn.set_rotation(-0.400000006);
+                stateBtn.rect(270, 200, 50, 50);
+		    lbl3 = new ms.ui.Label( 
+	    "Verdana",g_ui_root.manager, g_ui_root);
+                lbl3.text("this smile is a state button, click it");
+                lbl3.position(330, 240);
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
