--- a/xss/production/test/3js_cube.html
+++ b/xss/production/test/3js_cube.html
@@ -41,34 +41,42 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
-		cube_1.rotation.y = cube_1.rotation.y + (application.x_target_rotation - cube_1.rotation.y) * 0.0500000007;
-plane_1.rotation.z = cube_1.rotation.y;
-cube_1.rotation.x = cube_1.rotation.x + (application.y_target_rotation - cube_1.rotation.x) * 0.0500000007;
+		var xxx = get_rotation_y(cube_1.rotation);
+set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
+set_rotation_z(plane_1.rotation, get_rotation_y(cube_1.rotation));
+set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
 		set_active_camera(camera_1);
 }
 var materials = 
 new Array(
 );
-	materials.push(new THREE.MeshBasicMaterial({
-	color:Math.random() * 0xffffff
-	}));
-	materials.push(new THREE.MeshBasicMaterial({
-	color:Math.random() * 0xffffff
-	}));
-	materials.push(new THREE.MeshBasicMaterial({
-	color:Math.random() * 0xffffff
-	}));
-	materials.push(new THREE.MeshBasicMaterial({
-	color:Math.random() * 0xffffff
-	}));
-	materials.push(new THREE.MeshBasicMaterial({
-	color:Math.random() * 0xffffff
-	}));
-	materials.push(new THREE.MeshBasicMaterial({
-	color:Math.random() * 0xffffff
-	}));
-	var plane_material = new THREE.MeshBasicMaterial({
-	color:14737632
+var __basic_material1 = new THREE.MeshBasicMaterial({
+color:Math.random() * 0xffffff
+	});
+	materials.push(__basic_material1);
+                set_material_alpha(__basic_material1, 20);
+var __basic_material2 = new THREE.MeshBasicMaterial({
+color:Math.random() * 0xffffff
+	});
+	materials.push(__basic_material2);
+var __basic_material3 = new THREE.MeshBasicMaterial({
+color:Math.random() * 0xffffff
+	});
+	materials.push(__basic_material3);
+var __basic_material4 = new THREE.MeshBasicMaterial({
+color:Math.random() * 0xffffff
+	});
+	materials.push(__basic_material4);
+var __basic_material5 = new THREE.MeshBasicMaterial({
+color:Math.random() * 0xffffff
+	});
+	materials.push(__basic_material5);
+var __basic_material6 = new THREE.MeshBasicMaterial({
+color:Math.random() * 0xffffff
+	});
+	materials.push(__basic_material6);
+var plane_material = new THREE.MeshBasicMaterial({
+color:14737632
 	});
 var scene = 
 new THREE.Scene(
@@ -89,7 +97,7 @@ new THREE.Plane(
 200,200);
 	    var plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
-                plane_1.rotation.x = -1.57000005;
+                set_rotation_x(plane_1.rotation, -90);
                 application.x_target_rotation = 0;
                 application.x_target_rotation_on_mouse_down = 0;
                 application.mouse_x = 0;
@@ -127,9 +135,9 @@ application.y_target_rotation_on_mouse_down = application.y_target_rotation;
 		if (application.is_mouse_down)
 {
 application.mouse_x = x - application.window_half_x;
-application.x_target_rotation = application.x_target_rotation_on_mouse_down + (application.mouse_x - application.mouse_x_on_mouse_down) * 0.0199999996;
+application.x_target_rotation = application.x_target_rotation_on_mouse_down + (application.mouse_x - application.mouse_x_on_mouse_down) * 0.300000012;
 application.mouse_y = y - application.window_half_y;
-application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.0199999996;
+application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.300000012;
 }
 	};
 if(ui)
