--- a/xss/production/test/3js_cube_img.html
+++ b/xss/production/test/3js_cube_img.html
@@ -22,7 +22,7 @@
 <script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript">		
 	if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
-	var renderer = new THREE.WebGLRenderer( { antialias: true } );
+	var renderer = new THREE.WebGLRenderer( { antialias: false } );
 var ui;
 var active_camera;
 var g_elapsed = -1;
@@ -87,34 +87,40 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
-		cube_1.rotation.y = cube_1.rotation.y + (application.x_target_rotation - cube_1.rotation.y) * 0.0500000007;
-plane_1.rotation.z = cube_1.rotation.y;
-cube_1.rotation.x = cube_1.rotation.x + (application.y_target_rotation - cube_1.rotation.x) * 0.0500000007;
+		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - cube_1.rotation.y) * 0.100000001);
+set_rotation_z(plane_1.rotation, cube_1.rotation.y);
+set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - cube_1.rotation.x) * 0.100000001);
 		set_active_camera(camera_1);
 }
 var materials = 
 new Array(
 );
-	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_1').asset),
-	}));
-	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_2').asset),
-	}));
-	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_3').asset),
-	}));
-	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_4').asset),
-	}));
-	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_5').asset),
-	}));
-	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_6').asset),
-	}));
-	var plane_material = new THREE.MeshBasicMaterial({
-	color:14737632
+var __basic_material1 = new THREE.MeshBasicMaterial({
+map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_1').asset),
+	});
+	materials.push(__basic_material1);
+var __basic_material2 = new THREE.MeshBasicMaterial({
+map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_2').asset),
+	});
+	materials.push(__basic_material2);
+var __basic_material3 = new THREE.MeshBasicMaterial({
+map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_3').asset),
+	});
+	materials.push(__basic_material3);
+var __basic_material4 = new THREE.MeshBasicMaterial({
+map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_4').asset),
+	});
+	materials.push(__basic_material4);
+var __basic_material5 = new THREE.MeshBasicMaterial({
+map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_5').asset),
+	});
+	materials.push(__basic_material5);
+var __basic_material6 = new THREE.MeshBasicMaterial({
+map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_6').asset),
+	});
+	materials.push(__basic_material6);
+var plane_material = new THREE.MeshBasicMaterial({
+color:14737632
 	});
 var scene = 
 new THREE.Scene(
@@ -135,7 +141,7 @@ new THREE.Plane(
 200,200);
 	    var plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
-                plane_1.rotation.x = -1.57000005;
+                set_rotation_x(plane_1.rotation, -90);
 	var __playing_sound1 = new THREE.Sound(streamer.get_resource('sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg').asset
 	,700,20,true
 	);
