--- a/xss/production/test/ui_cliparea.html
+++ b/xss/production/test/ui_cliparea.html
@@ -153,21 +153,21 @@ window.onload = function()
                 ca2.rect(100, 60, 100, 100);
 		    btn1 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",div1.manager, div1);
-                btn1.set_rotation(0.200000003);
+                btn1.set_rotation(10);
 	btn1.click = function()
 	{    
 		lbl1.text("Got " + application.clicks + " smileys");
-btn1.set_rotation(btn1.rotation + 0.200000003);
+btn1.set_rotation(btn1.get_rotation() + 10);
 application.clicks = application.clicks + 1;
 	};
                 btn1.rect(90, 100, 50, 50);
 		    btn2 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",div1.manager, div1);
-                btn2.set_rotation(0.200000003);
+                btn2.set_rotation(10);
                 btn2.rect(150, 100, 50, 50);
 		    stateBtn = new ms.ui.StateButton( 
 	    "images/smile_grin_48.png","images/smile_sad_48.png",g_ui_root.manager, g_ui_root);
-                stateBtn.set_rotation(-0.400000006);
+                stateBtn.set_rotation(-45);
                 stateBtn.rect(270, 200, 50, 50);
 		    lbl3 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
