--- a/xss/production/test/3js_cameras.html
+++ b/xss/production/test/3js_cameras.html
@@ -113,8 +113,8 @@ new THREE.Cylinder(
 20,10,10,50);
 	    var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder, cylinder_material);
 	    scene.addObject(cylinder_1);
-                rotation_x(cylinder_1.rotation, 212);
-                rotation_y(cylinder_1.rotation, 212);
+                set_rotation_x(cylinder_1.rotation, 212);
+                set_rotation_y(cylinder_1.rotation, 212);
                 cylinder_1.position.x = 100;
                 cylinder_1.position.y = 30;
                 cylinder_1.position.z = 100;
@@ -123,8 +123,8 @@ new THREE.Cylinder(
 20,10,10,50);
 	    var cylinder_2 = new THREE.Mesh(cylinder_2_cylinder, cylinder1_material);
 	    scene.addObject(cylinder_2);
-                rotation_x(cylinder_2.rotation, 212);
-                rotation_y(cylinder_2.rotation, 212);
+                set_rotation_x(cylinder_2.rotation, 212);
+                set_rotation_y(cylinder_2.rotation, 212);
                 cylinder_2.position.x = -100;
                 cylinder_2.position.y = 30;
                 cylinder_2.position.z = 100;
@@ -136,8 +136,8 @@ new THREE.Cube(
                 cube_1.position.x = -100;
                 cube_1.position.y = 30;
                 cube_1.position.z = -100;
-                rotation_x(cube_1.rotation, 212);
-                rotation_y(cube_1.rotation, 212);
+                set_rotation_x(cube_1.rotation, 212);
+                set_rotation_y(cube_1.rotation, 212);
 	    var cube_2_cube = 
 new THREE.Cube(
 30,30,30);
@@ -146,15 +146,15 @@ new THREE.Cube(
                 cube_2.position.x = 100;
                 cube_2.position.y = 30;
                 cube_2.position.z = -100;
-                rotation_x(cube_2.rotation, 212);
-                rotation_y(cube_2.rotation, 212);
+                set_rotation_x(cube_2.rotation, 212);
+                set_rotation_y(cube_2.rotation, 212);
 	    var plane_1_plane = 
 new THREE.Plane(
 1000,1000,100,100);
 	    var plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
 	    scene.addObject(plane_1);
                 plane_1.position.y = 0.100000001;
-                rotation_x(plane_1.rotation, -90);
+                set_rotation_x(plane_1.rotation, -90);
                 application.is_ctrl_down = false;
                 application.is_shift_down = false;
 	document.addEventListener( 'keydown', keydown_application, false );
