--- a/xss/production/test/3js_carousel.html
+++ b/xss/production/test/3js_carousel.html
@@ -176,7 +176,7 @@ new THREE.Plane(
                 img1_reflect.doubleSided = true;
                 img1_reflect.scale.y = 0.800000012;
                 img1_reflect.position.y = -131.199997;
-                rotation_x(img1_reflect.rotation, 180);
+                set_rotation_x(img1_reflect.rotation, 180);
 	    var img2_plane = 
 new THREE.Plane(
 128,164);
@@ -218,7 +218,7 @@ new THREE.Plane(
                 img2_reflect.doubleSided = true;
                 img2_reflect.scale.y = 0.800000012;
                 img2_reflect.position.y = -131.199997;
-                rotation_x(img2_reflect.rotation, 180);
+                set_rotation_x(img2_reflect.rotation, 180);
 	    var img3_plane = 
 new THREE.Plane(
 128,164);
@@ -260,7 +260,7 @@ new THREE.Plane(
                 img3_reflect.doubleSided = true;
                 img3_reflect.scale.y = 0.800000012;
                 img3_reflect.position.y = -131.199997;
-                rotation_x(img3_reflect.rotation, 180);
+                set_rotation_x(img3_reflect.rotation, 180);
 	    var img4_plane = 
 new THREE.Plane(
 128,164);
@@ -302,7 +302,7 @@ new THREE.Plane(
                 img4_reflect.doubleSided = true;
                 img4_reflect.scale.y = 0.800000012;
                 img4_reflect.position.y = -131.199997;
-                rotation_x(img4_reflect.rotation, 180);
+                set_rotation_x(img4_reflect.rotation, 180);
 	    var img5_plane = 
 new THREE.Plane(
 128,164);
@@ -344,7 +344,7 @@ new THREE.Plane(
                 img5_reflect.doubleSided = true;
                 img5_reflect.scale.y = 0.800000012;
                 img5_reflect.position.y = -131.199997;
-                rotation_x(img5_reflect.rotation, 180);
+                set_rotation_x(img5_reflect.rotation, 180);
                 application.angle = null;
                 application.start = 0;
                 application.speed = 0.0199999996;
