--- a/xss/production/test/3js_cube_img.html
+++ b/xss/production/test/3js_cube_img.html
@@ -87,9 +87,9 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
-		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - cube_1.rotation.y) * 0.100000001);
-set_rotation_z(plane_1.rotation, cube_1.rotation.y);
-set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - cube_1.rotation.x) * 0.100000001);
+		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
+set_rotation_z(plane_1.rotation, get_rotation_y(cube_1.rotation));
+set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
 		set_active_camera(camera_1);
 }
 var materials = 
@@ -184,9 +184,9 @@ application.y_target_rotation_on_mouse_down = application.y_target_rotation;
 		if (application.is_mouse_down)
 {
 application.mouse_x = x - application.window_half_x;
-application.x_target_rotation = application.x_target_rotation_on_mouse_down + (application.mouse_x - application.mouse_x_on_mouse_down) * 0.0199999996;
+application.x_target_rotation = application.x_target_rotation_on_mouse_down + (application.mouse_x - application.mouse_x_on_mouse_down) * 0.300000012;
 application.mouse_y = y - application.window_half_y;
-application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.0199999996;
+application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.300000012;
 }
 	};
 if(ui)
