--- a/xss/production/test/box2d2.html
+++ b/xss/production/test/box2d2.html
@@ -48,7 +48,7 @@ var Sound = new ms.ui.Sound();
         , b2Transform = Box2D.Common.Math.b2Transform
         ;
         var g_world = new b2World(
-            new b2Vec2(1, 0)    //gravity
+            new b2Vec2(0, 10)    //gravity
         ,  true                 //allow sleep
         );
             var g_spawner_manager = new ms.arcade.SpawnManager();
@@ -155,7 +155,7 @@ function start(resolution)
                 var y = pos.y*g_world_scale;
                 bb.host.xs_updating = true;
                 bb.host.position(x - bb.host.w/2, y - bb.host.h/2);
-                bb.host.set_rotation(angle);
+                bb.host.set_rotation(angle*180/Math.PI);
                 bb.host.xs_updating = false;
             }
             bb = bb.GetNext();
@@ -197,8 +197,11 @@ window.onload = function()
 	};	
 		    btn1 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",g_ui_root.manager, g_ui_root);
-                btn1.set_rotation(0.200000003);
+                btn1.set_rotation(90);
                 btn1.rect(200, 200, 50, 50);
+		    __img1 = new ms.ui.Image( 
+	    "images/stone-12.jpg",g_ui_root.manager, g_ui_root);
+                __img1.rect(0, 390, 600, 40);
                 btn1.ev_resized = function(cmp) 
                 {
                     if (cmp.physics)
@@ -228,16 +231,36 @@ window.onload = function()
                         btn1.parent.removeComponent(btn1);
                     }
                 }
+                __img1.ev_resized = function(cmp) 
+                {
+                    if (cmp.physics)
+                        g_world.DestroyBody(cmp.physics);
              fixDef.density = 1;
              fixDef.friction = 0.5;
              fixDef.restitution = 0.200000003;
              bodyDef.type = b2Body.b2_staticBody;
                 fixDef.shape = new b2PolygonShape;
-                    fixDef.shape.SetAsBox(20/(2*g_world_scale), 2/(2*g_world_scale));
+                    fixDef.shape.SetAsBox(cmp.w/(2*g_world_scale), cmp.h/(2*g_world_scale));
             fixDef.isSensor = false;
-                bodyDef.position.Set(10, 15.1300001);
+                bodyDef.position.Set((cmp.x + cmp.w/2)/g_world_scale, (cmp.y + cmp.h/2)/g_world_scale);
             current_body = g_world.CreateBody(bodyDef);
             current_body.CreateFixture(fixDef);
+                cmp.physics = current_body;
+                cmp.moved = update_body_position;
+                current_body.host = cmp;
+                }
+                if (__img1.w > 0 && __img1.h > 0)
+                {
+                    __img1.ev_resized(__img1);
+                }
+                __img1.RemoveFromWorld = function(keep_visual) 
+                {
+                    g_world.DestroyBody(__img1.physics);
+                    if (!keep_visual)
+                    {
+                        __img1.parent.removeComponent(__img1);
+                    }
+                }
             g_ui.fill_background = false; //td: cross idiom
             var debugDraw = new b2DebugDraw();
             var debugDrawCanvas = document.getElementById("myCanvas");
